--- a/dist.ini
+++ b/dist.ini
@@ -4,11 +4,44 @@ license = Artistic_2_0
 copyright_holder = Renee Baecker
 copyright_year   = 2014
 
+[Git::Contributors]
+include_authors = 1
+
 [VersionFromModule]
 [PodWeaver]
 
-[@Basic]
+[PodCoverageTests]
+[PodSyntaxTests]
+
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
 [@Git]
+[MetaJSON]
+
+[MetaProvides::Package]
+
+[ReadmeAnyFromPod / MarkdownInRoot]
+phase = build
+
+[ReadmeAnyFromPod / TextInBuild]
+phase = build
+
+[GitHubREADME::Badge]
+badges = travis
+badges = cpants
+badges = issues
+phase = build
+place = top
+
+[ReadmeAddDevInfo]
+phase = build
+before = # AUTHOR
+add_contribution_file = 1
+
+[ContributorsFile]
+filename = CONTRIBUTORS
 
 [MetaResources]
 homepage = http://github.com/reneeb/Acme-DarmstadtPM-TieHash
@@ -18,6 +51,5 @@ repository.web = http://github.com/reneeb/Acme-DarmstadtPM-TieHash
 repository.type = git
 
 [Prereqs]
-Tie::ListKeyedHash = 1.02
-Test::CheckManifest = 1.26
+Test::CheckManifest = 1.33
 perl = 5.006001
